# d2genocide

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
config/: settings.json  ui.json  ui.md
genocide/: Cargo.toml
genocide/src/: hack.rs  lib.rs  logging.rs
genocide/src/config/: mod.rs  settings.rs  ui.rs
genocide/src/d2/: area.rs  draw.rs  game.rs  hooks.rs  mod.rs  ptrs.rs  stats.rs  stubs.rs  unit.rs
genocide/src/memory/: patch.rs
genocide/src/modules/: chicken.rs  mod.rs
genocide/src/utils/: console.rs  macros.rs  mod.rs
injector/: Cargo.toml
injector/src/: logging.rs  main.rs
