[package]
name = "genocide"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = [
    "minwindef",
    "memoryapi",
    "consoleapi",
    "libloaderapi",
    "winnt",
    "wincon",
    "winuser",
    "processthreadsapi",
    "handleapi",
    "psapi",
    "heapapi",
    "synchapi"
] }
log = "0.4.17"
simple-logging = { version = "2.0.2", optional = true }
log-panics = { version = "2.1.0", features = ["with-backtrace"], optional = true }
appdirs = "0.2.0"
retour = { git = "https://github.com/Hpmason/retour-rs", branch = "master" }
widestring = "1.0.2"
smallvec = "1.10.0"

[features]
default = []
logging = ["simple-logging", "log-panics"]