[package]
name = "injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple-logging = { version = "2.0.2", optional = true }
log-panics = { version = "2.1.0", features = ["with-backtrace"], optional = true }
appdirs = "0.2.0"
dll-syringe = "0.15.0"

[features]
default = []
logging = ["simple-logging", "log-panics"]